[package]
name = "riscv"
version = "0.6.0"
repository = "https://github.com/rust-embedded/riscv"
authors = ["The RISC-V Team <risc-v@teams.rust-embedded.org>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Low level access to RISC-V processors"
keywords = ["riscv", "register", "peripheral"]
license = "ISC"

[dependencies]
bare-metal = "0.2.5"
bitflags = "1.0"
bit_field = "0.10.0"
log = "0.4"

[build-dependencies]
riscv-target = "0.1.2"

[features]
inline-asm = []
